--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ header {
   height: 78vh;
 }
 
-.service-item img {
+.service-img img {
   width: 35px;
 }
 
@@ -53,4 +53,23 @@ header {
 .new_category_type > p {
   font-size: 22px;
   color: gray;
+}
+
+@media only screen and (max-width: 760px) {
+  .search {
+    min-width: 350px;
+  }
+
+  .bg-image {
+    background: rgb(135, 134, 134);
+    height: 50vh;
+  }
+  .hero-container {
+    height: 50vh;
+  }
+  .service_item {
+    width: 100px;
+
+    text-align: center;
+  }
 }
